# flockround

./: .gitignore  FLOCK_LITE_TODO.md  Makefile  README.md  TODO.md  instructions.txt  package-lock.json  package.json
docs/: FLOCK_TODO.md  TODO.md  instructions.txt
sim-wasm/: Cargo.toml
sim-wasm/src/: flock2.rs  lib.rs  math.rs  model_classic.rs  model_flock2.rs  neighbor_grid.rs
web/: eslint.config.js  index.html  package.json  tsconfig.json
web/src/: main.ts  render.ts  style.css  vite-env.d.ts  wasm.ts
