[package]
name = "sim-wasm"
version = "0.1.0"
edition = "2021"
description = "Flockround Rust WASM simulation crate"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.105"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
